# tap-magento

./: .gitignore  pyproject.toml  ruff.toml  tox.ini
.secrets/: .gitignore
tap_magento/: client.py  streams.py  tap.py
tap_magento/tests/: test_core.py
templates/: README.md  config.json
