[tool.poetry]
name = "tap-magento"
version = "0.0.12"
description = "`tap-magento` is a Singer tap for Magento, built with the Meltano SDK for Singer Taps."
authors = ["hotglue"]
keywords = [
    "ELT",
    "Magento",
]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "<3.11,>=3.6.2"
requests = "^2.25.1"
singer-sdk = "^0.4.0"
requests-oauthlib = "^1.3.1"
random-user-agent = "^1.0.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
tox = "^3.24.4"
flake8 = "^3.9.2"
black = "^21.9b0"
pydocstyle = "^6.1.1"
mypy = "^0.910"
types-requests = "^2.26.1"
isort = "^5.10.1"

[tool.isort]
profile = "black"
multi_line_output = 3 # Vertical Hanging Indent
src_paths = "tap_magento"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-magento = 'tap_magento.tap:TapMagento.cli'
